# test_task

./: ANSWERS.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  init.sql
jh_interview/: analyze.ipynb  analyze_correlation.ipynb  analyze_distance.ipynb  analyze_migration.ipynb  models.py
jh_interview/database/: db_session.py  repository.py  schemas.py
jh_interview/service/: property.py
tests/: __init__.py  test_count.py  test_presence.py  test_property.py
